1.0.0 (currently working on)
- [#3902] Feature: Add icons for the registration, speaker and organizer records in the grids
- [#3904] Feature: Load the stores of the grids after the grid is rendered for the first time
- [#3881] Feature: Add a context menu to the organizers grid
- [#3880] Feature: Add a context menu to the speakers grid
- [#3894] Feature: Add a context menu to the registrations grid
- [#1879] Fix: Don't use &= or |= for booleans
- [#3851] Fix: CSV export for events from the BE ignores event record in subfolders
- [#3882] Feature: Respect the back-end user rights in the ExtJS back-end module
- [#3870] Change: tx_oelib_List should use an SplObjectStorage
- [#3895] Change: Make the BE module testable
- [#3893] Fix: returnUrls needs to get encoded
- [#3886] Feature: Integrate the CSV export functions
- [#3827] Feature: Use ExtJS in the back-end module
- [#3874] Fix: Test failures in the registration manager testcase
- [#3872] Feature: Add a hook for modifying the "my events" list row
- [#3877] Fix: pi1::isLoggedIn must be public
- [#3222] Feature: Model the "additional attendees" as a 1:n relation from registrations to FE users
- [#3849] Feature: Use separate labels for the first name and last name in the registration form
- [#3861] Cleanup: Drop our own exception handlers in seminars
- [#3850] Fix: Non-admin users have no "edit" icon for registrations in the BE module
- [#3809] Fix: Salutation in thank-you e-mails is formal although informal is configured
- [#3853] Localization: Replace "Seminar-Manager" with "Seminarmanager" in the German localizations
- [#3852] Localization: Update the French localization, thanks to Martin Rebetez
- [#3847] Fix: Replace newRecordLinkPosition with levelLinksPosition in the TCA
- [#3843] Fix: Payment methods set in the FE editor do not get saved
- [#3814] Fix: The "list of registrations" column should be hidden in the topic list
- [#3277] Cleanup: Drop the workaround for Core bug 2178 from the seminars BE module