@@ -1,4 +1,5 @@
 1.0.0 (currently working on)
+- [#3911] Change: Attached files should be combined from the topic and date record
 - [#3902] Feature: Add icons for the registration, speaker and organizer records in the grids
 - [#3904] Feature: Load the stores of the grids after the grid is rendered for the first time
 - [#3881] Feature: Add a context menu to the organizers grid
